Fix Android file API compatibility and add explicit image-generation adapters